test_scores/negative_dimers/features/Q6IQ26.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q6IQ26.pkl.xz